objects/wktEmployeeLocationProgram__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionItemsFormula__c</fullName>
        <formula>IF
(
AND(ProgramEIDGenerated__c  = 1, (TODAY() -  EmploymentHireDateGenerated__c) &gt;= 28),
&apos;Missed WOTC Deadline&apos;, 
IF(isblank( EmployeeSurveyDateTimeGenerated__c ), &apos;Take survey.&apos;,  IF(NOT(ISBLANK( DocumentsNeededGenerated__c )), &apos;Need: &apos; &amp;  DocumentsNeededGenerated__c &amp; &apos;. &apos;,&apos;&apos;) &amp; IF(NOT(ISBLANK( DocumentReplacementsNeededGenerated__c )), &apos;Resend: &apos; &amp; DocumentReplacementsNeededGenerated__c &amp; &apos;. &apos;, &apos;&apos;)))</formula>
        <label>Action Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientEmployeeIDFormula__c</fullName>
        <formula>Employee__r.ClientEmployeeID__c</formula>
        <label>Client Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLocationNumberFormula__c</fullName>
        <formula>Location__r.ClientLocationID__c</formula>
        <label>Client Location Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentReplacementsNeededGenerated__c</fullName>
        <label>Document Replacements Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentsNeededGenerated__c</fullName>
        <label>Documents Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentsReceivedGenerated__c</fullName>
        <label>Documents Received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Address</label>
        <referenceTo>EmployeeAddress__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployeeCountyFormula__c</fullName>
        <formula>EmployeeAddress__r.County__r.Name</formula>
        <label>Employee County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeFullAddressFormula__c</fullName>
        <formula>EmployeeAddress__r.StreetAddressText__c  + &apos;, &apos; +  EmployeeAddress__r.CityName__c + &apos;, &apos; +  EmployeeAddress__r.State__r.StateAbbr__c  + &apos; &apos; +  EmployeeAddress__r.ZipCode__c</formula>
        <label>Employee Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNameFormula__c</fullName>
        <formula>Employee__r.FirstLastNameFormula__c</formula>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSSNFormula__c</fullName>
        <formula>Employee__r.SSN__c</formula>
        <label>Employee SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyDateTimeGenerated__c</fullName>
        <label>Employee Survey Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyDeclinedFormula__c</fullName>
        <formula>IF(EmployeeSurvey__r.DeclinedSurveyBit__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Employee Survey Declined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyLocationFormula__c</fullName>
        <formula>EmployeeSurvey__r.EntityLocation__c</formula>
        <label>Employee Survey Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyResultFormula__c</fullName>
        <formula>EmployeeSurvey__r.SurveyResultGenerated__c</formula>
        <label>Employee Survey Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmploymentHireDateGenerated__c</fullName>
        <label>Employment Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmploymentInitialHourlyRateFormula__c</fullName>
        <formula>Employment__r.InitialHourlyRateAmount__c</formula>
        <label>Employment Initial Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmploymentReferenceIDFormula__c</fullName>
        <formula>Employment__r.ReferenceID__c</formula>
        <label>Employment Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentTerminationDateFormula__c</fullName>
        <formula>Employment__r.EndDate__c</formula>
        <label>Employment Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalDocumentInstructionsGenerated__c</fullName>
        <label>External Document Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LocationNameFormula__c</fullName>
        <formula>Location__r.LocationNameFormula__c</formula>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationProgramShortNameGenerated__c</fullName>
        <label>Location Program Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Program</label>
        <referenceTo>LocationProgram__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Stage</label>
        <referenceTo>QualificationProcessStage__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramEIDGenerated__c</fullName>
        <label>Program EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramQualificationProcessStageFormula__c</fullName>
        <formula>ProgramQualification__r.ProcessStage__c</formula>
        <label>Program Qualification Process Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Qualification</label>
        <referenceTo>ProgramQualification__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualifiedCategoriesGenerated__c</fullName>
        <label>Qualified Categories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReportedHireDateFormula__c</fullName>
        <formula>EmployeeSurvey__r.ReportedHireDate__c</formula>
        <label>Reported Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyProgramScreened__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Program Screened</label>
        <referenceTo>SurveyProgramScreened__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Project</label>
        <referenceTo>SurveyProject__c</referenceTo>
        <relationshipLabel>Employees Locations and Programs</relationshipLabel>
        <relationshipName>EmployeesLocationsAndPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wktEmployeeLocationProgramEID__c</fullName>
        <externalId>true</externalId>
        <label>Employee Location Program EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Employee Location Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employee Location Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees Locations and Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>